# agent-gym

./: .gitignore  README.md  pyproject.toml  requirements-cloud.txt  requirements.txt
data/: train_trl_v2_curriculum.jsonl
results/: eval_results_ckpt250.json  m3_baseline_with_tools.json  m3_qwen3_14b.json
scripts/: dq_check.py  generate_data.py  generate_data_v2.py  prep_dataset.py  prep_dataset_v2.py  regen_flagged.py  run_baseline.py  run_with_tools.py  setup_cloud.sh  setup_cloud_pipeline.sh  setup_dual_env.sh  test_generate_v2.py  test_rewards.py  train_dual_env.sh  train_pipeline.sh
src/: config.py
src/data/: generate.py  generate_v2.py
src/env/: cache.py  extraction.py  rate_limiter.py  search_env.py  search_env_v2.py
src/env/providers/: base.py  duckduckgo.py  serper.py
src/rewards/: __init__.py  answer_reward.py  efficiency_reward.py  format_reward.py  llm_judge_reward.py  ndcg_reward.py  retrieval_reward.py  thinking_reward.py  truncation_reward.py
src/training/: inference_server.py  remote_grpo.py  thinking_budget.py  tito.py  tito_trainer.py  train.py
src/training/configs/: cloud_14b.yaml  cloud_14b_pipeline.yaml  cloud_14b_v2.yaml  cloud_14b_v2_single.yaml  cloud_14b_v2_tito_test.yaml  local_debug.yaml  local_debug_v2.yaml
src/utils/: device.py
tests/: test_rewards.py  test_search_env.py
